fix wrapping of dice

--- a/src/assets/styles/probability.scss
+++ b/src/assets/styles/probability.scss
@@ -103,6 +103,7 @@
 
 .result {
     display: flex;
+    flex-wrap: wrap;
     .result-data {
         display: flex;
         .result-count {
